tests/cases/control-flow/errors/loop-drop-owner.ari
fn main() -> i64 {
  let condition = true;
  let token: own i64 = 5;
  while condition {
    let inner = 1;
    drop token;
  }
  return 0;
}
